deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: phone-numbers-beautifier-ingress
  namespace: ipsos
  annotations:
    nginx.org/proxy-connect-timeout: "180s"
    nginx.org/proxy-read-timeout: "180s"
    nginx.org/client-max-body-size: "100m"
spec:
  ingressClassName: nginx
  rules:
  - host: numbers.ipsos.lizachu.co.uk
    http:
      paths:
      - backend:
          service:
            name: phone-numbers-beautifier-service
            port:
              number: 8000
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
